Opened 16 years ago

Closed 16 years ago

#3061 closed bug (fixed)

Simulated mouse clicks don't register on mouse image

Reported by: humdinger Owned by: anevilyak
Priority: normal Milestone: R1
Component: Preferences/Mouse Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

This is hrev28502.

As you know, you can simulate a right-click with CTRL+left-click and a middle-click with CTRL+ALT+left-click. The mouse image always only shows the left-click by inverting button 1 on the mouse image. No biggie. Still...

Change History (3)

comment:1 by anevilyak, 16 years ago

Owner: changed from axeld to anevilyak

comment:2 by anevilyak, 16 years ago

Status: newassigned

comment:3 by anevilyak, 16 years ago

Resolution: fixed
Status: assignedclosed

Fixed in hrev28528.

Note: See TracTickets for help on using tickets.