Rework this a bit to handle ctrl+clicking and ctrl+alt+clicking for right and middle mouse button. Fixes ticket #3061.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@28528 a95241bf-73f2-0310-859d-f6bbb57e9c96